
* EXSLT RegExp support in standard XPath (not only XSLT)

* ``lxml.pyclasslookup`` module that can access the entire tree in read-only
  mode to help determining a suitable Element class

* ``Element.values()`` to accompany the existing ``.keys()`` and ``.items()``

* ``collectAttributes()`` C-function to build a list of attribute
  keys/values/items for a libxml2 node

Bugs fixed
----------

* passing '' as namespace prefix in nsmap could be passed through to libxml2

* Objectify couldn't handle prefixed XSD type names in ``xsi:type``

* More ET compatible behaviour when writing out XML declarations or not

* More robust error handling in ``iterparse()``

* Documents lost their top-level PIs and comments on serialisation

* lxml.sax failed on comments and PIs. Comments are now properly ignored and
  PIs are copied.

* Thread safety in XPath evaluators

* Raise AssertionError when passing strings containing '\0' bytes

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3beta (2007-02-27)
====================

Features added
--------------

* ``DTD`` validator class (like ``RelaxNG`` and ``XMLSchema``)

* HTML generator helpers by Fredrik Lundh in ``lxml.htmlbuilder``

* ``ElementMaker`` XML generator by Fredrik Lundh in ``lxml.builder.E``

* Support for pickeling ``objectify.ObjectifiedElement`` objects to XML

* ``update()`` method on Element.attrib

* Optimised replacement for libxml2's _xmlReconsiliateNs(). This allows lxml
  a better handling of namespaces when moving elements between documents.

Bugs fixed
----------

* Possible memory leaks in namespace handling when moving elements between
  documents

Other changes
-------------

* major restructuring in the documentation


1.2.1 (2007-02-27)
==================

Bugs fixed
----------

* Build fixes for MS compiler

* Item assignments to special names like ``element["text"]`` failed

* Renamed ObjectifiedDataElement.__setText() to _setText() to make it easier